<resources>
    <!--MainActivity-->
    <string name="app_name">TU-CIS</string>
    <string name="info_btn">Info available</string>
    <string name="dec_vertical_dots">More</string>
    <!-- ThreeActivityDialogFragment-->
    <string name="no_info">Not Available</string>
    <string name="visit_web">Visit LSF web page</string>
    <string name="write_email">Write e-mail</string>
    <string name="make_call">Make call</string>
    <!--Write e-mail-->
    <string name="email_subject">Email Subject</string>
    <string name="email_body">Message Body</string>
    <!--InfoDisplayActivity-->
    <string name="btn_search">SEARCH</string>
    <string name="weekend_lecture">No Lecture During Weekends&#8230;\n Keep Calm and Party Hard!</string>
    <string name="next_criterion">Select Next Criterion</string>
    <string name="select_criteria">Please Select Criteria</string>
    <!--Spinners-->
    <string name="spinner_criteria">Select Criteria:</string>
    <string name="spinner_student">Student</string>
    <string name="spinner_academician">Academician</string>
    <string name="spinner_lec_today">Lectures by today</string>
    <string name="spinner_lec_room">Lectures by room</string>
    <string name="spinner_prof_room">Academicians by room</string>
    <string name="spinner_phd_room">Ph.D by room</string>
    <!--PersonGroupRow-->
    <string name="dot" translatable="false">&#8226;</string>
    <!--WebPageActivity-->
    <string name="web_title_lsf">TU-LSF</string>
    <!--Menu-->
    <string name="ttl_legend">Legend</string>
    <string name="ttl_find">Find</string>
    <!-- WiFi Dialog-->
    <string name="dialog_title">Network Information</string>
    <string name="dialog_wifi_text">Please Connect to \"eduroam\" WiFi Network.</string>
    <string name="dialog_wifi_on">Open</string>
    <string name="dialong_wifi_off">Cancel</string>
    <!-- GPS Dialog-->
    <string name="dialog_gps_text">Please enable GPS.</string>
    <string name="dialog_gps_on">Open</string>
    <string name="dialog_gps_off">Cancel</string>
    <!-- Select Dialog-->
    <string name="choose_activity">Activity</string>
    <string name="dialog_ok_btn">OK</string>
    <string name="dialog_cancel">Close</string>
    <!-- basemap menu items -->
    <string name="baseMaps">Base Maps</string>
    <string name="streetMapMenu">Streets</string>
    <string name="topoMenu">Topographic</string>
    <string name="hybridMenu">Hybrid</string>
    <string name="osmMenu">OpenStreetMap</string>
    <!-- dynamic map service url -->
    <string name="map_service_url">http://quader.igg.tu-berlin.de:6080/arcgis/rest/services/Vasko/NewMap_102_1108/MapServer</string>
    <string name="text">TextView</string>
</resources>
